--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.10.1",
     "react-icons": "^4.2.0",
+    "react-query": "^3.18.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.7",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "faker": "^5.5.3",
+    "miragejs": "^0.1.41",
     "typescript": "^4.3.5"
   }
 }
